# LogBurst

./: .env_example  .gitignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yml
init/: init.sql
init/clickhouse/: init.sql
migrations/clickhouse/up/: 20251201173112_create_logs_table.sql
migrations/pg/down/: 20251122170452_delete_users.sql
migrations/pg/up/: 20251122165755_create_users_table.sql  20251122170452_insert_users.sql  V20251122170452__insert_users.up.sql
proto/: log.proto
src/: main.rs  server.rs
src/config/: clickhouse.rs  grpc.rs  mod.rs  postgres.rs  rest.rs
src/db/: click_house.rs  click_house_client.rs  mod.rs  pg.rs
src/db/clickhouse/: mod.rs  structs.rs
src/db/pg/: error.rs  mod.rs  structs.rs
src/grpc/: mod.rs
src/handlers/: auth.rs  errors.rs  jwt.rs  logs.rs  middlewares.rs  mod.rs  routes.rs
src/models/: app.rs  auth_command.rs  db_worker.rs  log.rs  log_command.rs  mod.rs  user.rs
src/models/http_client/: auth_body.rs  auth_payload.rs  claims.rs  creation_payload.rs  get_logs_params.rs  mod.rs  reg_payload.rs  role.rs  routes.rs
src/models/http_client/api/: handlers.rs
src/models/http_client/api/handlers/: auth.rs  auth_command.rs  mod.rs
src/rest/: auth.rs  error.rs  logs.rs  mod.rs  structs.rs
src/traits/: auth.rs  auth_repository.rs  client.rs  data_base.rs  logs_repository.rs  mod.rs  new.rs  start.rs
