[package]
name = "LogBurst"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.2", features = ["full"] }

# pg
deadpool-postgres = { version = "0.14.1", features = ["rt_tokio_1"] }
tokio-postgres = "0.7.13"
refinery = { version = "0.8.16", features = ["tokio-postgres"] }

# .env
dotenvy = "0.15.7"
envy = "0.4.2"


serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
axum = "0.8.3"